# polyglot-utils

./: README.md
.github/workflows/: java.yml  python.yml
docs/: philosophy.md
java/polyglot-utils-java/: build.gradle.kts  settings.gradle.kts
java/polyglot-utils-java/gradle/wrapper/: gradle-wrapper.properties
java/polyglot-utils-java/src/main/java/dev/jdwilliams/utils/math/: MathUtils.java
java/polyglot-utils-java/src/main/java/dev/jdwilliams/utils/strings/: StringUtils.java
java/polyglot-utils-java/src/test/java/dev/jdwilliams/utils/math/: MathUtilsTest.java
java/polyglot-utils-java/src/test/java/dev/jdwilliams/utils/strings/: StringUtilsTest.java
python/: .gitignore  pyproject.toml
python/src/jdwilliams_utils/math/: __init__.py  math_utils.py
python/src/jdwilliams_utils/strings/: __init__.py  string_utils.py
python/tests/math/: test_math_utils.py
python/tests/strings/: test_string_utils.py
